# HMI_Nexus

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh
cmake/: options.cmake  third_party.cmake
cmake/toolchains/: d211-riscv64.cmake  f133-riscv64.cmake
config/common/: README.md
config/default_panel/: app.conf  product_config.h
config/lvgl/: lv_conf.h
doc/: README.md  async_design.md  http_api.md  json_api.md  log_api.md  lvgl_ui.md  wifi_api.md
scripts/: build_d211.sh
source/examples/demo_panel/: main.cpp
source/examples/http_async_example/: main.cpp
source/examples/http_example/: main.cpp
source/examples/json_example/: main.cpp
source/examples/logger_example/: main.cpp
source/examples/wifi_example/: main.cpp
source/include/hmi_nexus/app/: application.h
source/include/hmi_nexus/common/: error_code.h  result.h  types.h
source/include/hmi_nexus/common/json/: json_parser.h
source/include/hmi_nexus/device/: runtime.h
source/include/hmi_nexus/device/display/: accel_2d_backend.h  backend_factory.h  display_backend.h  types.h
source/include/hmi_nexus/net/: http_async_client.h  http_client.h  mqtt_client.h  tls_context.h  topic_router.h  websocket_client.h  wifi_manager.h
source/include/hmi_nexus/service/: cloud_service.h  connectivity_service.h  device_service.h  ota_service.h
source/include/hmi_nexus/system/: config_center.h  event_bus.h  logger.h  ui_dispatcher.h
source/include/hmi_nexus/ui/: app.h  lvgl_port.h  screen.h  screen_manager.h  theme_manager.h
source/include/hmi_nexus/ui/screens/: ge2d_diagnostics_screen.h  home_screen.h  lvgl_benchmark_demo_screen.h  lvgl_widgets_demo_screen.h
source/include/hmi_nexus/ui/widgets/: chart.h  login.h
source/src/app/: application.cpp
source/src/common/json/: cjson_parser.cpp
source/src/device/: runtime.cpp
source/src/device/display/: d211_ge2d_accel_2d.cpp  fbdev_display_backend.cpp  headless_display_backend.cpp  null_accel_2d_backend.cpp  sunxi_g2d_accel_2d.cpp
source/src/net/: http_async_client.cpp  http_client.cpp  mqtt_client.cpp  tls_context.cpp  topic_router.cpp  websocket_client.cpp  wifi_manager.cpp
source/src/service/: cloud_service.cpp  connectivity_service.cpp  device_service.cpp  ota_service.cpp
source/src/system/: config_center.cpp  event_bus.cpp  logger.cpp  ui_dispatcher.cpp
source/src/ui/: app.cpp  screen.cpp  screen_manager.cpp  theme_manager.cpp
source/src/ui/lvgl/: linux_touch_input.cpp  linux_touch_input.h  lvgl_port.cpp  lvgl_private_compat.h
source/src/ui/lvgl/d211/: d211_lvgl_fake_image.h  d211_lvgl_ge2d.c  d211_lvgl_ge2d.h  d211_lvgl_mpp_decoder.c  d211_lvgl_mpp_decoder.h
source/src/ui/lvgl/f133/: f133_lvgl_g2d.c  f133_lvgl_g2d.h
source/src/ui/screens/: ge2d_diagnostics_screen.cpp  home_screen.cpp  lvgl_benchmark_demo_screen.cpp  lvgl_widgets_demo_screen.cpp
targets/: README.md  TEMPLATE.md  projects.conf
targets/d211-riscv64/: target.conf
targets/f133-riscv64/: target.conf
targets/linux-host/: target.conf
targets/template-cross/: target.conf
targets/template-native/: target.conf
